PMA-1045 changed refactoring in DAO